--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
+    "html-to-image": "^1.11.11",
+    "next": "14.2.14",
+    "next-auth": "^4.24.8",
+    "node-fetch": "^3.3.2",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.14"
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.14"
+    "eslint-config-next": "14.2.14",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
