--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "html-to-image": "^1.11.11",
+    "js-cookie": "^3.0.5",
     "next": "14.2.14",
     "next-auth": "^4.24.8",
     "node-fetch": "^3.3.2",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18"
