--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nookies": "^2.5.2",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-loader-spinner": "^6.1.6"
   },
   "devDependencies": {
     "eslint": "^8",
